mostly fix that stupid alignment issue on the ping and settings chat buttons

--- a/browserassets/css/browserOutput.css
+++ b/browserassets/css/browserOutput.css
@@ -94,7 +94,7 @@ img.emoji {
 	background: #ddd;
 	height: 30px;
 	padding: 8px 0 2px 0;
-	border-top: 1px solid #b4b4b4;
+	margin-top: 1px
 }
 #ping i {display: block; text-align: center;}
 #ping .ms {
@@ -116,7 +116,6 @@ img.emoji {
 	color: #333;
 	text-decoration: none;
     line-height: 28px;
-    border-top: 1px solid #b4b4b4;
 }
 #options a:hover {background: #ccc;}
 #options .toggle {
